[gd_scene load_steps=10 format=2]

[ext_resource path="res://OutputBar/output_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Charge/panel_detailed.png" type="Texture" id=2]
[ext_resource path="res://Charge/Charge.gd" type="Script" id=3]
[ext_resource path="res://Charge/button.png" type="Texture" id=4]
[ext_resource path="res://Fonts/soviet_font_12.tres" type="DynamicFont" id=5]
[ext_resource path="res://Charge/bar.png" type="Texture" id=6]
[ext_resource path="res://Sounds/mid_beeps.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/low_beeps.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/high_beeps.wav" type="AudioStream" id=9]

[node name="Charge" type="Node2D"]
script = ExtResource( 3 )

[node name="panel" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="bars" type="Node2D" parent="panel"]
position = Vector2( 14, 36 )

[node name="bar_0" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 0, -7 )
scale = Vector2( 1, 7 )
texture = ExtResource( 6 )
centered = false

[node name="bar_1" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 3, -8 )
scale = Vector2( 1, 8 )
texture = ExtResource( 6 )
centered = false

[node name="bar_2" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 6, -9 )
scale = Vector2( 1, 9 )
texture = ExtResource( 6 )
centered = false

[node name="bar_3" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 9, -10 )
scale = Vector2( 1, 10 )
texture = ExtResource( 6 )
centered = false

[node name="bar_4" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 12, -11 )
scale = Vector2( 1, 11 )
texture = ExtResource( 6 )
centered = false

[node name="bar_5" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 15, -12 )
scale = Vector2( 1, 12 )
texture = ExtResource( 6 )
centered = false

[node name="bar_6" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 18, -13 )
scale = Vector2( 1, 13 )
texture = ExtResource( 6 )
centered = false

[node name="bar_7" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 21, -14 )
scale = Vector2( 1, 14 )
texture = ExtResource( 6 )
centered = false

[node name="bar_8" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 24, -15 )
scale = Vector2( 1, 15 )
texture = ExtResource( 6 )
centered = false

[node name="bar_9" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 27, -16 )
scale = Vector2( 1, 16 )
texture = ExtResource( 6 )
centered = false

[node name="bar_10" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 30, -17 )
scale = Vector2( 1, 17 )
texture = ExtResource( 6 )
centered = false

[node name="bar_11" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 33, -18 )
scale = Vector2( 1, 18 )
texture = ExtResource( 6 )
centered = false

[node name="bar_12" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 36, -19 )
scale = Vector2( 1, 19 )
texture = ExtResource( 6 )
centered = false

[node name="bar_13" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 39, -20 )
scale = Vector2( 1, 20 )
texture = ExtResource( 6 )
centered = false

[node name="bar_14" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 42, -21 )
scale = Vector2( 1, 21 )
texture = ExtResource( 6 )
centered = false

[node name="bar_15" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 45, -22 )
scale = Vector2( 1, 22 )
texture = ExtResource( 6 )
centered = false

[node name="bar_16" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 48, -23 )
scale = Vector2( 1, 23 )
texture = ExtResource( 6 )
centered = false

[node name="bar_17" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 51, -24 )
scale = Vector2( 1, 24 )
texture = ExtResource( 6 )
centered = false

[node name="bar_18" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 54, -25 )
scale = Vector2( 1, 25 )
texture = ExtResource( 6 )
centered = false

[node name="bar_19" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 57, -26 )
scale = Vector2( 1, 26 )
texture = ExtResource( 6 )
centered = false

[node name="bar_20" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 60, -27 )
scale = Vector2( 1, 27 )
texture = ExtResource( 6 )
centered = false

[node name="bar_21" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 63, -28 )
scale = Vector2( 1, 28 )
texture = ExtResource( 6 )
centered = false

[node name="bar_22" type="Sprite" parent="panel/bars"]
visible = false
position = Vector2( 66, -29 )
scale = Vector2( 1, 29 )
texture = ExtResource( 6 )
centered = false

[node name="output_bar" parent="." instance=ExtResource( 1 )]
position = Vector2( 3, 101 )

[node name="button" type="Sprite" parent="."]
position = Vector2( 33, 52 )
texture = ExtResource( 4 )
centered = false
hframes = 2

[node name="button_label" type="Label" parent="button"]
margin_left = 10.0
margin_top = 16.0
margin_right = 19.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.980392, 0.615686, 0.156863, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="low_beeps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="high_beeps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="mid_beeps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
